[package]
name = "vlawn"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam-channel = "0.5.15"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
crossterm = "0.29.0"
ratatui = "0.29.0"
socket2 = { version = "0.6.1", features = ["all"] }
ws = "0.9.2"
color-eyre = "0.6.5"
