[package]
name = "vlawn"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam-channel = "0.5.15"
log = "0.4.28"
postcard = { version = "1.1.3", features = ["alloc"] }
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde-binary = "0.5.0"
simplelog = "0.12.2"
socket2 = { version = "0.6.1", features = ["all"] }
whoami = "1.6.1"
ws = "0.9.2"
