[package]
name = "vlawn"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.29"
simplelog = "0.12.2"
chrono = "0.4.42"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
derivative = "2.2.0"
crossbeam-channel = "0.5.15"
ws = "0.9.2"
anyhow = "1.0.100"
postcard = { version = "1.1.3", features = ["alloc"] }
serde-binary = "0.5.0"
serde = "1.0.228"
